fixed horizontal scrolling issue

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@ html {
 html {
 	font-size: 1rem;
 	font-weight: 400;
+}
+
+html,
+body {
+	width: 100vw;
 	overflow-x: hidden;
 }
 
