--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -18,7 +18,7 @@
 }
 
 .copyright {
-	width: 100%;
+	width: 100vw;
 	padding: 1rem 0;
 	text-align: center;
 }
