--- a/src/routes/Portfolio/Portfolio.module.css
+++ b/src/routes/Portfolio/Portfolio.module.css
@@ -5,6 +5,11 @@
 	padding-top: 125px;
 }
 
+.container {
+	width: 100vw;
+	overflow-x: hidden;
+}
+
 .container h1 {
 	max-width: 90%;
 	text-align: center;
